# Minesweeper-RS

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
assets/: Icon.qoi
assets/classic/: LICENSE
assets/default/: LICENSE
benches/: benches.rs
doc/: NOTICE
src/: gui.rs  lib.rs  main.rs  minesweeper_app.rs  minesweeper_core.rs  minesweeper_gui.rs  mineswepeer_core.rs
src/core/: board.rs  cell.rs
src/gui/: about.rs  assets.rs  config.rs  game.rs  game_selection.rs  main_menu.rs  screens.rs  settings.rs  settings_screen.rs  theme.rs
src/gui/screens/: about.rs  custom_setup.rs  game.rs  game_selection.rs  leaderboard.rs  main_menu.rs  settings_screen.rs
src/minesweeper_app/: game_screen.rs
src/minesweeper_core/: board.rs  tile.rs
src/minesweeper_gui/: game_screen.rs  main_menu.rs  start_screen.rs
src/mineswepeer_core/: board.rs  tile.rs
