[package]
name = "minesweeper-rs"
version = "0.5.0"
authors = ["Hayden Reckward <tictanic8@hotmail.com>"]
edition = "2024"
rust-version = "1.88.0"
description = "A version of Minesweeper written in Rust."
readme = "README.md"
repository = "https://github.com/HaywardHHayward/Minesweeper-RS"
license = "Artistic-2.0"
categories = ["games"]
publish = false

[profile.release]
lto = "thin"

[dependencies]
rand = "0.9.0"
iced = { version = "0.14.0-dev", git = "https://github.com/iced-rs/iced.git", features = ["image", "tokio"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
directories = "6.0.0"
zip = "4.3"

[build-dependencies]
zip = "4.3"
walkdir = "2.5"

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }

[[bench]]
name = "benches"
harness = false