[package]
name = "minesweeper-rs"
version = "0.6.0"
authors = ["Hayden Reckward <tictanic8@hotmail.com>"]
edition = "2024"
rust-version = "1.88.0"
description = "A version of Minesweeper written in Rust."
readme = "README.md"
repository = "https://github.com/HaywardHHayward/Minesweeper-RS"
license = "Artistic-2.0"
categories = ["games"]
publish = false

[profile.release]
lto = "thin"

[features]
default = ["non-free"]
benching = []
non-free = []

[dependencies]
thiserror = "2"
rand = "0.9"
iced = { version = "0.14.0-dev", git = "https://github.com/iced-rs/iced.git", features = ["image", "tokio", "svg"], rev = "c538311" }
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
directories = "6.0"
zip = "6.0"
tinyvec = "1.10"
ciborium = "0.2"
whoami = "1.6.1"
chrono = { version = "0.4.42", features = ["serde"] }

[build-dependencies]
zip = "6.0.0"
walkdir = "2.5"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
required-features = ["benching"]
name = "benches"
harness = false